--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-file-drop": "^13.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
