--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "angular-calendar": "^0.29.0",
+    "angularx-flatpickr": "^6.6.0",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.23.0",
+    "flatpickr": "^4.6.13",
     "jquery": "^3.6.0",
     "ngx-file-drop": "^13.0.0",
     "rxjs": "~6.6.0",
