--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve -o",
+        "start": "ng serve -o --proxy-config dev-proxy.conf.json",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test"
