Enable the prod and dev configurations Enable the commands to use the azure prod proxy

--- a/angular.json
+++ b/angular.json
@@ -58,12 +58,10 @@
                             "outputHashing": "all"
                         },
                         "development": {
-                            "buildOptimizer": false,
-                            "optimization": false,
-                            "vendorChunk": true,
-                            "extractLicenses": false,
-                            "sourceMap": true,
-                            "namedChunks": true
+                            "fileReplacements": [{
+                                "replace": "src/environments/environment.ts",
+                                "with": "src/environments/environment.prod.ts"
+                            }]
                         }
                     },
                     "defaultConfiguration": "production"
