--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "ng": "ng",
         "start-dev": "ng serve -o --proxy-config dev-proxy.conf.json",
         "start-prod": "ng serve -o --proxy-config prod-proxy.conf.json",
-        "build": "ng build",
+        "build": "ng build --configuration production",
         "watch": "ng build --watch --configuration development",
         "test": "ng test"
     },
