--- a/angular.json
+++ b/angular.json
@@ -60,7 +60,7 @@
                         "development": {
                             "fileReplacements": [{
                                 "replace": "src/environments/environment.ts",
-                                "with": "src/environments/environment.prod.ts"
+                                "with": "src/environments/environment.dev.ts"
                             }]
                         }
                     },
