--- a/angular.json
+++ b/angular.json
@@ -97,10 +97,14 @@
                         ],
                         "styles": [
                             "node_modules/angular-calendar/css/angular-calendar.css",
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "src/styles.css"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            "node_modules/jquery/dist/jquery.min.js",
+                            "node_modules/bootstrap/dist/js/bootstrap.min.js"
+                        ]
                     }
                 }
             }
