--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
         "@ng-bootstrap/ng-bootstrap": "^10.0.0",
         "angular-calendar": "^0.29.0",
         "angularx-flatpickr": "^6.6.0",
-        "bootstrap": "^5.1.3",
+        "bootstrap": "^5.2.0",
         "date-fns": "^2.23.0",
         "flatpickr": "^4.6.13",
         "jquery": "^3.6.0",
         "ngx-file-drop": "^13.0.0",
+        "popper.js": "^1.16.1",
         "rxjs": "~6.6.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
