--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@angular/platform-browser-dynamic": "~12.2.0",
         "@angular/router": "~12.2.0",
         "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+        "@swimlane/ngx-charts": "^20.1.0",
         "angular-calendar": "^0.29.0",
         "angularx-flatpickr": "^6.6.0",
         "bootstrap": "^5.2.0",
@@ -39,6 +40,9 @@
         "@angular-devkit/build-angular": "~12.2.8",
         "@angular/cli": "~12.2.8",
         "@angular/compiler-cli": "~12.2.0",
+        "@types/d3": "^7.4.0",
+        "@types/d3-scale": "^4.0.2",
+        "@types/d3-selection": "^3.0.3",
         "@types/jasmine": "~3.8.0",
         "@types/node": "^12.11.1",
         "jasmine-core": "~3.8.0",
